--- a/components/Button.module.scss
+++ b/components/Button.module.scss
@@ -1,5 +1,7 @@
 .btn {
+  justify-content: center;
+  align-items: center;
   width: 150px;
-  height: 50px;
-  margin: 10px;
+  height: 30px;
+  margin: 5px;
 }
