--- a/components/AsaButton.module.scss
+++ b/components/AsaButton.module.scss
@@ -1,7 +1,7 @@
 .btn {
-  width: 15vw;
-  height: 3vw;
-  margin: 1vw;
+  width: 200px;
+  height: 50px;
+  margin: 20px;
   color: #fff;
   font-weight: bold;
   background-color: #faae21;
