--- a/components/CountDown.module.scss
+++ b/components/CountDown.module.scss
@@ -13,9 +13,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 10vw;
-      height: 1.5vw;
-      margin: 0.1vw;
+      width: 100px;
+      height: 25px;
+      margin: 5px;
       background-color: #000000;
       border: none;
       border-radius: 5px;
@@ -29,9 +29,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 10vw;
-      height: 1.5vw;
-      margin: 0.1vw;
+      width: 100px;
+      height: 25px;
+      margin: 5px;
       background-color: #000000;
       border: none;
       border-radius: 5px;
@@ -45,9 +45,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 10vw;
-      height: 1.5vw;
-      margin: 0.1vw;
+      width: 100px;
+      height: 25px;
+      margin: 5px;
       background-color: #000000;
       border: none;
       border-radius: 5px;
@@ -61,9 +61,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 10vw;
-      height: 1.5vw;
-      margin: 0.1vw;
+      width: 100px;
+      height: 25px;
+      margin: 5px;
       background-color: #000000;
       border: none;
       border-radius: 5px;
@@ -74,9 +74,8 @@
       color: #ffffff;
     }
     .stopBtn {
-      width: 5vw;
-      height: 5vw;
-      margin: 0.1vw;
+      width: 75px;
+      height: 75px;
       color: #fff;
       font-weight: bold;
       background-color: #2ad0fa;
@@ -96,9 +95,9 @@
       position: absolute;
       left: 5%;
       .bariBtn {
-        width: 5vw;
-        height: 3vw;
-        margin: 0.1vw;
+        width: 75px;
+        height: 50px;
+        margin-bottom: 20px;
         color: #fff;
         font-weight: bold;
         background-color: #fc3535;
@@ -108,9 +107,9 @@
         border-bottom: 2px solid #b42626;
       }
       .kataBtn {
-        width: 5vw;
-        height: 3vw;
-        margin: 0.1vw;
+        width: 75px;
+        height: 50px;
+        margin-bottom: 20px;
         color: #fff;
         font-weight: bold;
         background-color: #f7872c;
@@ -120,9 +119,9 @@
         border-bottom: 2px solid #bb6723;
       }
       .futuuBtn {
-        width: 5vw;
-        height: 3vw;
-        margin: 0.1vw;
+        width: 75px;
+        height: 50px;
+        margin-bottom: 20px;
         color: #fff;
         font-weight: bold;
         background-color: #5afa2a;
@@ -132,9 +131,8 @@
         border-bottom: 2px solid #3aa11b;
       }
       .yawaBtn {
-        width: 5vw;
-        height: 3vw;
-        margin: 0.1vw;
+        width: 75px;
+        height: 50px;
         color: #fff;
         font-weight: bold;
         background-color: #2ad0fa;
