--- a/components/CountDown.module.scss
+++ b/components/CountDown.module.scss
@@ -77,6 +77,7 @@
       width: 75px;
       height: 75px;
       color: #fff;
+      font-size: 1.1rem;
       font-weight: bold;
       background-color: #2ad0fa;
       border: none;
@@ -99,6 +100,7 @@
         height: 50px;
         margin-bottom: 20px;
         color: #fff;
+        font-size: 1.1rem;
         font-weight: bold;
         background-color: #fc3535;
         border: none;
@@ -111,6 +113,7 @@
         height: 50px;
         margin-bottom: 20px;
         color: #fff;
+        font-size: 1.1rem;
         font-weight: bold;
         background-color: #f7872c;
         border: none;
@@ -123,6 +126,7 @@
         height: 50px;
         margin-bottom: 20px;
         color: #fff;
+        font-size: 1.1rem;
         font-weight: bold;
         background-color: #5afa2a;
         border: none;
@@ -134,6 +138,7 @@
         width: 75px;
         height: 50px;
         color: #fff;
+        font-size: 1.1rem;
         font-weight: bold;
         background-color: #2ad0fa;
         border: none;
