--- a/components/AsaButton.module.scss
+++ b/components/AsaButton.module.scss
@@ -1,10 +1,11 @@
 .btn {
   width: 200px;
-  height: 50px;
+  height: 40px;
   margin: 20px;
   color: #fff;
+  font-size: 1.2rem;
   font-weight: bold;
-  background-color: #faae21;
+  background-color: #f5a30c;
   border: none;
   border-radius: 100vh;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
