--- a/components/PreButton.module.scss
+++ b/components/PreButton.module.scss
@@ -1,8 +1,9 @@
 .btn {
   width: 200px;
-  height: 50px;
+  height: 40px;
   margin: 20px;
   color: #fff;
+  font-size: 1.2rem;
   font-weight: bold;
   background-color: #f500ac;
   border: none;
